--- a/app/src/main/res/layout/fragment_fragment_one.xml
+++ b/app/src/main/res/layout/fragment_fragment_one.xml
@@ -10,4 +10,20 @@
         android:layout_height="match_parent"
         android:text="联系人" />
 
+    <Button
+        android:id="@+id/button4"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left|center_vertical"
+        android:text="部门" />
+
+    <Button
+        android:id="@+id/button3"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|top"
+        android:text="公司" />
+
 </FrameLayout>
